--- a/code/config.ini
+++ b/code/config.ini
@@ -1,7 +1,7 @@
 [params]
-option = FusionDenoise
+option = Denoise
 gpu = 0
-noise_param_idx = 10
+noise_param_idx = 9
 
 [FusionDenoise]
 model_name = FusionDenoiseModel
@@ -26,7 +26,7 @@ log_name = ${model_name}_${params:noise_param_idx}
 train_files = util/train_intensity.txt
 val_files = util/val_intensity.txt
 resume = ./pth/denoise.pth
-batch_size = 5
+batch_size = 1
 workers = 12
 epochs = 4
 lambda_tv = 1e-5
