--- a/code/middlebury.ini
+++ b/code/middlebury.ini
@@ -6,8 +6,8 @@
 # 50 bg photons on average
 ckpt_noise_param_idx = 9 
 # which network variation to run
-option = FusionDenoise
-gpu = 0
+option = Denoise
+gpu = 1
 # which scene to process, one of 
 # Art, Books, Bowling, Dolls, Laundry, Moebius, 
 # Plastic, or Reindeer. For multiples, separate items by
