--- a/code/config.ini
+++ b/code/config.ini
@@ -1,6 +1,6 @@
 [params]
 option = Denoise
-gpu = 0
+gpu = 1
 noise_param_idx = 9
 
 [FusionDenoise]
@@ -22,15 +22,15 @@ optimizer = torch.optim.Adam(params, opt['lr'])
 [Denoise]
 model_name = DenoiseModel
 logdir = ./logging
-log_name = ${model_name}_${params:noise_param_idx}
+log_name = ${model_name}_opt_filtering_${params:noise_param_idx}
 train_files = util/train_intensity.txt
 val_files = util/val_intensity.txt
-resume = ./pth/denoise.pth
-batch_size = 1
+resume = .
+batch_size = 4
 workers = 12
-epochs = 4
+epochs = 1
 lambda_tv = 1e-5
-print_every = 10
+print_every = 50
 save_every = 100
 lr = 1e-4
 optimizer = torch.optim.Adam(params, opt['lr'])
