--- a/code/middlebury.ini
+++ b/code/middlebury.ini
@@ -40,7 +40,7 @@ ckpt_noise_param_5 =
 ckpt_noise_param_6 = 
 ckpt_noise_param_7 = 
 ckpt_noise_param_8 = 
-ckpt_noise_param_9 =  ./pth/denoise.pth 
+ckpt_noise_param_9 =  /home/anant/Dropbox/MATLAB/SPAD/deep_net_models/lambda=30,mu=1,no_filtering_1_ep/epoch_0_3437.pth
 ckpt_noise_param_10 =
 [Upsample8xDenoise]
 naive = 0
